# quiz1-ridwanalfarezi

./: README.md  buyer.h  main.cpp  meson.build  seller.h
bank/: bank.h
bank_customer/: bank_customer.cpp  bank_customer.h
buyer/: buyer.cpp  buyer.h
item/: item.h
order/: order.cpp  order.h
seller/: seller.cpp  seller.h
store/: store.cpp  store.h
transaction/: transaction.h
